- 필터 추가 완료 - 태그 기능 추가 - KAKAO -> Slack 으로 변경

--- a/.github/workflows/extinguish_fire.yml
+++ b/.github/workflows/extinguish_fire.yml
@@ -16,5 +16,5 @@ jobs:
         run: npm install
       - name: Run script
         env:
-          KAKAO_ACCESS_TOKEN: ${{ secrets.KAKAO_ACCESS_TOKEN }}
+          COW_SLACK_URL: ${{ secrets.COW_SLACK_URL }}
         run: node index.js
